<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выберите упражнение:"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinnerExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/exercises"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/textViewExercise" />

    <TextView
        android:id="@+id/textViewReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Введите количество повторений:"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/spinnerExercise" />

    <EditText
        android:id="@+id/editTextReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/textViewReps" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Сохранить результат"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
