<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="Настройки" />

    <item
        android:id="@+id/nav_physics"
        android:icon="@drawable/baseline_fitness_center_24"
        android:title="Физические упражнения" />
    <item android:id="@+id/nav_whater"
        android:title="Вода"
        android:icon="@drawable/baseline_bloodtype_24"/>
    <item
        android:id="@+id/statistics"
        android:icon="@drawable/baseline_auto_awesome_24"
        android:title="Статистика"/>


</menu>